corrected section alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,8 @@ h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 50px 0;
+  padding-right: 20px;
   overflow: hidden;
 }
 
